fixed video on mobile

--- a/index.css
+++ b/index.css
@@ -979,9 +979,10 @@ a{
       width: 100vw;
       height: 56vw;
       min-height: calc( 100px + 25vw);
+      max-height: 85%;
     }
     .fullimgh{
-      height: 75%;
+      height: 65%;
       bottom: 0;
       width: 100%;
       margin: 0;
@@ -994,12 +995,11 @@ a{
       min-height: 200px;
     }
   .fullvidh{
-      height: calc(20px + 75%);
-      bottom: 0;
+      height: calc(20px + 65%);
       width: 100%;
       margin: 0;
       max-width: 100%;
-      top: 65%;
+      top: 70%;
       left: 0;
       margin: 0;
       right: 1%;
